*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -1,3 +1,19 @@
+tpDonate = Make a donation to the development team (that would be me) of Data Crow.
+tpDriveManager = The Drive Manager is a powerful team which can keep all of you files based items synchronized with your file system.
+tpEditItemAsNew = Use the selected item as a template for a new item.
+tpNewItem = Create a new item using the item form.
+tpCardView = A stylish view which represents each item as a card. You can configure this view using the view settings from the settings menu (or CTRL-Y).
+tpTableView = A high performance view. The table view allows you to directly modify the informations of your items. You can configure this view using the view settings from the settings menu (or CTRL-Y). 
+tpChangePassword = Change your password. Make sure to remember your newly entered password! After setting a password you will always have to log in. Note that the default login name is 'sa'.
+tpLookAndFeel = Changes the look and feel (also known as skin) of Data Crow. Restart Data Crow for the best result.
+tpApplyFilter = (Re-) Applies the filter
+tpAttachFileInfo = Links a file to item and adds the corresponding file information.
+tpAutoNumbering = Enables you to number your items. Using this tool you can set up numbering rules for new items and, additionally, you can (re-)number all your existing items.
+tpBackupAndRestore = Create a backup of your data or restore a previous backup.
+tpBeginnerMode = Sets Data Crow into beginner mode, hiding the more advanced features. 
+tpAddChild = Adds a new child item to the selected item.
+tpAbout = The about dialog tells you more about the Data Crow product.
+tpHelp = Opens the help. The help can also be consulted by using the F1 key. 
 tpAddDrive = Add a new drive by creating a mapping to an existing location.
 tpCopyModuleWizard = With this wizard you can create a new module based on an existing one.
 tpExportModuleWizard = This wizard can be used to export a custom module and all its related information. This give you the change to share your custom modules with other users of Data Crow.
@@ -37,7 +53,7 @@ tpRunSQL = Runs the SQL query as entered in the SQL Input field
 tpClear = Clears all data from the screen
 tpSave = Saves the item(s)
 tpSaveChanges = Saves all the modified / new items
-tpDelete = Deletes the item(s)
+tpDelete = Deletes the selected item(s)
 tpClose = Closes this form and cancels all actions
 tpSearch = Starts the search with the conditions and options
 tpProxyServerName = Name of the proxy server, leave empty if none exists
