--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,5 @@
+msgToolSelectModuleSelect = Select the module for which you would like to create or update items. 
+msgUnexpectedErrorOccurred = An unexpected error has occurred.
 msgMatchFound = A match was found for '%1'. Item '%2' has been updated.
 msgAddDrive = Add a new drive
 msgCannotSetItemAsParentLoop = The selected parent is already used in the hierarchy for this item.
