*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -1,12 +1,21 @@
+tpQuit = Exit Data Crow. Closes the application.
+tpItemExportWizard = 
+tpFileRenamer = Rename and/or move the files on your system by using the item information. A preview with the pending changed is shown before actually renaming your files.
+tpStartProgram = Tries to open the file linked to the selected item. Note that you can configure file types to be opened with your favorite program from within the settings menu.
+tpFileImport = Can be used to create items based on files located on your file system. The file importer will extract information from each file and add this information to the new item. Imported items are added to the new item tab from where they can be saved. 
+tpExpertUser = The expert user tools allows you to set low-level database options. It also allows you to execute SQL statements on the database.
+tpFieldSettings = From here fields can be made hidden (or visible) and renamed. Additionally the properties of a field can be changed. A field can for example be set to required. 
 tpDonate = Make a donation to the development team (that would be me) of Data Crow.
 tpDriveManager = The Drive Manager is a powerful team which can keep all of you files based items synchronized with your file system.
 tpEditItemAsNew = Use the selected item as a template for a new item.
+tpExpertMode = Sets Data Crow into experience user mode enabling all options and tools.
 tpNewItem = Create a new item using the item form.
 tpCardView = A stylish view which represents each item as a card. You can configure this view using the view settings from the settings menu (or CTRL-Y).
 tpTableView = A high performance view. The table view allows you to directly modify the informations of your items. You can configure this view using the view settings from the settings menu (or CTRL-Y). 
 tpChangePassword = Change your password. Make sure to remember your newly entered password! After setting a password you will always have to log in. Note that the default login name is 'sa'.
 tpLookAndFeel = Changes the look and feel (also known as skin) of Data Crow. Restart Data Crow for the best result.
 tpApplyFilter = (Re-) Applies the filter
+tpFilter = Create an advanced filter and store it for reuse.
 tpAttachFileInfo = Links a file to item and adds the corresponding file information.
 tpAutoNumbering = Enables you to number your items. Using this tool you can set up numbering rules for new items and, additionally, you can (re-)number all your existing items.
 tpBackupAndRestore = Create a backup of your data or restore a previous backup.
