*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -1,5 +1,15 @@
 tpQuit = Exit Data Crow. Closes the application.
-tpItemExportWizard = 
+tpShowLog = Opens the event log window.
+tpManageItemX = Create, delete or edit %1.
+tpOpenItem = Opens the selected item in the item form. From within the item form the information can be viewed and altered.
+tpOnlineSearch = Use an online service to find your items and add them to Data Crow.
+tpNewItemWizard = Easily add a new item. After following the steps of this wizard you will have created a new item. Note that this is the most simplistic way of using Data Crow. More advanced tools like to online search and the file import can create multiple items at once.
+tpMassUpdate = Update multiple items using your preferred online service.
+tpTemplates = Here you can create, delete and edit templates. Templates can be used to fill default values for new items. 
+tpLoan = Lend or return an item. Items can be lend by contact persons.
+tpLoanInformation = Overview of your lend items. Which item was lend by whom and for how long?
+tpItemImportWizard = A tool which can import items from text files and XML files. 
+tpItemExportWizard = Allows you to export your items to a XML or text file. These exports can be used to import items into others systems or other installations of Data Crow. They can also be used to create reports (by using XSLT for example).
 tpFileRenamer = Rename and/or move the files on your system by using the item information. A preview with the pending changed is shown before actually renaming your files.
 tpStartProgram = Tries to open the file linked to the selected item. Note that you can configure file types to be opened with your favorite program from within the settings menu.
 tpFileImport = Can be used to create items based on files located on your file system. The file importer will extract information from each file and add this information to the new item. Imported items are added to the new item tab from where they can be saved. 
