*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -1,6 +1,22 @@
 tpQuit = Exit Data Crow. Closes the application.
 tpShowLog = Opens the event log window.
+tpSaveAll = Save all items.
+tpUndoSearch = Removes the filter from the view
+tpWebFieldSettings = Customize the Web GUI
+tpWebServer = Web server control panel. Stop or start the web server.
+tpViewSettings = Customize the current view
+tpUpdateAll = Updates multiple items with the selected value(s).
+tpToolSelectWizard = Helps you to select the right tool for the job
+tpTitleRewriter = Set rewriting (also known as formatting) rules for the titles of new items. Additionally you can rewrite all the existing titles.
+tpSort = Sort the items. Items can be sorted on multiple fields.
+tpSettings = Opens the settings window.
+tpSaveSelected = Saves the selected item(s)
+tpChangePassword = Change the password for the selected user
+tpCreateReport = Create a PDF or HTML report.
+tpRetrieveAudioCDInfo = Retrieve information on the audio CD currently inserted in your CD or DVD drive.
+tpResourceEditor = Edit any text of Data Crow and a very convenient tools for making a new translation.
 tpManageItemX = Create, delete or edit %1.
+tpQuickViewSettings = Modify the quick view (the panel shown on the right-hand side of the view). You can add, remove and order the fields. 
 tpOpenItem = Opens the selected item in the item form. From within the item form the information can be viewed and altered.
 tpOnlineSearch = Use an online service to find your items and add them to Data Crow.
 tpNewItemWizard = Easily add a new item. After following the steps of this wizard you will have created a new item. Note that this is the most simplistic way of using Data Crow. More advanced tools like to online search and the file import can create multiple items at once.
