--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblToolSelectWizard = Tool Select Wizard
 lblSaveDirectly = Save directly: bypass the new items tab
 lblContainerManaged = Items can be assigned to a container. Adds a container field to this module.
 lblFileBacked = Items represent actual files. Adds additional file fields to this module. 
