*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -450,7 +450,7 @@ lblSearchFor = Search for
 lblDeleteItem = Delete %1
 lblSaveItem = Save %1
 lblSelectionColor = Selection Color
-lblXImport = %1 Import
+lblXImport = %1 File Import
 lblPreview = Preview
 lblBold = Bold font
 lblFontBold = Font (labels & buttons)
