--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -32,9 +32,9 @@ tpFileImport = Can be used to create items based on files located on your file s
 tpExpertUser = The expert user tools allows you to set low-level database options. It also allows you to execute SQL statements on the database.
 tpFieldSettings = From here fields can be made hidden (or visible) and renamed. Additionally the properties of a field can be changed. A field can for example be set to required. 
 tpDonate = Make a donation to the development team (that would be me) of Data Crow.
-tpDriveManager = The Drive Manager is a powerful team which can keep all of you files based items synchronized with your file system.
+tpDriveManager = The Drive Manager is a powerful tool which can keep all of your file-based-items synchronized with your file system.
 tpEditItemAsNew = Use the selected item as a template for a new item.
-tpExpertMode = Sets Data Crow into experience user mode enabling all options and tools.
+tpExpertMode = Sets Data Crow into experienced user mode enabling all options and tools.
 tpNewItem = Create a new item using the item form.
 tpCardView = A stylish view which represents each item as a card. You can configure this view using the view settings from the settings menu (or CTRL-Y).
 tpTableView = A high performance view. The table view allows you to directly modify the informations of your items. You can configure this view using the view settings from the settings menu (or CTRL-Y). 
@@ -43,7 +43,7 @@ tpLookAndFeel = Changes the look and feel (also known as skin) of Data Crow. Res
 tpApplyFilter = (Re-) Applies the filter
 tpFilter = Create an advanced filter and store it for reuse.
 tpAttachFileInfo = Links a file to item and adds the corresponding file information.
-tpAutoNumbering = Enables you to number your items. Using this tool you can set up numbering rules for new items and, additionally, you can (re-)number all your existing items.
+tpAutoNumbering = Enables you to number your items. Using this tool you can set up numbering rules for new items and additionally you can (re-)number all your existing items.
 tpBackupAndRestore = Create a backup of your data or restore a previous backup.
 tpBeginnerMode = Sets Data Crow into beginner mode, hiding the more advanced features. 
 tpAddChild = Adds a new child item to the selected item.
