--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,53 @@
+tpQuit = Exit Data Crow. Closes the application.
+tpShowLog = Opens the event log window.
+tpSaveAll = Save all items.
+tpUndoSearch = Removes the filter from the view
+tpWebFieldSettings = Customize the Web GUI
+tpWebServer = Web server control panel. Stop or start the web server.
+tpViewSettings = Customize the current view
+tpUpdateAll = Updates multiple items with the selected value(s).
+tpToolSelectWizard = Helps you to select the right tool for the job
+tpTitleRewriter = Set rewriting (also known as formatting) rules for the titles of new items. Additionally you can rewrite all the existing titles.
+tpSort = Sort the items. Items can be sorted on multiple fields.
+tpSettings = Opens the settings window.
+tpSaveSelected = Saves the selected item(s)
+tpChangePassword = Change the password for the selected user
+tpCreateReport = Create a PDF or HTML report.
+tpRetrieveAudioCDInfo = Retrieve information on the audio CD currently inserted in your CD or DVD drive.
+tpResourceEditor = Edit any text of Data Crow and a very convenient tools for making a new translation.
+tpManageItemX = Create, delete or edit %1.
+tpQuickViewSettings = Modify the quick view (the panel shown on the right-hand side of the view). You can add, remove and order the fields. 
+tpOpenItem = Opens the selected item in the item form. From within the item form the information can be viewed and altered.
+tpOnlineSearch = Use an online service to find your items and add them to Data Crow.
+tpNewItemWizard = Easily add a new item. After following the steps of this wizard you will have created a new item. Note that this is the most simplistic way of using Data Crow. More advanced tools like to online search and the file import can create multiple items at once.
+tpMassUpdate = Update multiple items using your preferred online service.
+tpTemplates = Here you can create, delete and edit templates. Templates can be used to fill default values for new items. 
+tpLoan = Lend or return an item. Items can be lend by contact persons.
+tpLoanInformation = Overview of your lend items. Which item was lend by whom and for how long?
+tpItemImportWizard = A tool which can import items from text files and XML files. 
+tpItemExportWizard = Allows you to export your items to a XML or text file. These exports can be used to import items into others systems or other installations of Data Crow. They can also be used to create reports (by using XSLT for example).
+tpFileRenamer = Rename and/or move the files on your system by using the item information. A preview with the pending changed is shown before actually renaming your files.
+tpStartProgram = Tries to open the file linked to the selected item. Note that you can configure file types to be opened with your favorite program from within the settings menu.
+tpFileImport = Can be used to create items based on files located on your file system. The file importer will extract information from each file and add this information to the new item. Imported items are added to the new item tab from where they can be saved. 
+tpExpertUser = The expert user tools allows you to set low-level database options. It also allows you to execute SQL statements on the database.
+tpFieldSettings = Verberg en hernoem velden of pas hun eigenschappen aan. 
+tpDonate = Doneer $ aan het team van Data Crow.
+tpDriveManager = De Drive Manager is een krachtige hulpmiddel die de bestandsinformatie van je items bijwerkt. Handig wanneer je je bestanden hebt verplaatst naar een andere locatie.
+tpEditItemAsNew = Gebruik het bestaande item als template voor het nieuwe item.
+tpExpertMode = De expert modus stelt alle hulpmiddelen ter beschikking.
+tpNewItem = Maak een nieuw item aan.
+tpCardView = Een stijlvol overzicht waarbij ieder item wordt weergegeven als een kaartje. Je kunt dit overzicht configureren door middel van de overzichtsinstellingen (CTRL-Y) welke is te vinden in het instellingen menu.
+tpTableView = Met dit overzicht kunnen items direct, vanuit het overzicht, worden bewerkt. Je kunt dit overzicht configureren door middel van de overzichtsinstellingen (CTRL-Y) welke is te vinden in het instellingen menu. 
+tpChangePassword = Verander je wachtwoord. Vergeet dit wachtwoord niet! De naam inlog naam van de standaard gebruiker is 'sa'.
+tpLookAndFeel = Verandert de 'look and feel' (ook wel 'skin' genoemd) van Data Crow. Start Data Crow opnieuw voor het beste resultaat. 
+tpApplyFilter = Pas het filter nogmaals toe.
+tpFilter = Stel een geavanceerd filter samen en bewaar deze zodat hij kan worden hergebruikt.
+tpAttachFileInfo = Voegt bestandsinformatie toe aan een bestaand item.
+tpAutoNumbering = Hiermee kunnen items worden genummerd. Je kunt hier regels opstellen voor de nummering. Ook de reeds bestaande items kunnen als nog worden genummerd. 
+tpBackupAndRestore = Maak een backup of zet een backup terug.
+tpBeginnerMode = De beginners modus verbergt de meer geavanceerde hulpmiddelen. 
+tpAbout = Vertelt meer over het Data Crow product.
+tpHelp = Opent de help. De help kan ook worden geopende met behulp van de F1 toets.
 lblToolSelectWizard = Selecteer een Hulpmiddel Wizard 
 msgMatchFound = Er was een resultaat gevonden voor '%1'. Item '%2' is bijgewerkt.
 msgAddDrive = Voeg een schijfstation toe
@@ -749,7 +799,7 @@ sysAudiocdFieldWebpage=Webpage
 0x0450=QDesign Music
 sysMusicartistItem=Artiest
 lblItemExportWizard=Item Export Wizard
-lblCreateNew=Create New
+lblCreateNew=Nieuw
 msgClosingDB=De database wordt afgesloten en de item cache wordt weggeschreven
 lblLog=Gebeurtenissen Log
 sysImage_categoryFieldCreated=Aangemaakt op
