*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,35 +1,37 @@
-tpQuit = Exit Data Crow. Closes the application.
-tpShowLog = Opens the event log window.
-tpSaveAll = Save all items.
-tpUndoSearch = Removes the filter from the view
-tpWebFieldSettings = Customize the Web GUI
-tpWebServer = Web server control panel. Stop or start the web server.
-tpViewSettings = Customize the current view
-tpUpdateAll = Updates multiple items with the selected value(s).
-tpToolSelectWizard = Helps you to select the right tool for the job
-tpTitleRewriter = Set rewriting (also known as formatting) rules for the titles of new items. Additionally you can rewrite all the existing titles.
-tpSort = Sort the items. Items can be sorted on multiple fields.
-tpSettings = Opens the settings window.
-tpSaveSelected = Saves the selected item(s)
-tpChangePassword = Change the password for the selected user
-tpCreateReport = Create a PDF or HTML report.
-tpRetrieveAudioCDInfo = Retrieve information on the audio CD currently inserted in your CD or DVD drive.
-tpResourceEditor = Edit any text of Data Crow and a very convenient tools for making a new translation.
-tpManageItemX = Create, delete or edit %1.
-tpQuickViewSettings = Modify the quick view (the panel shown on the right-hand side of the view). You can add, remove and order the fields. 
-tpOpenItem = Opens the selected item in the item form. From within the item form the information can be viewed and altered.
-tpOnlineSearch = Use an online service to find your items and add them to Data Crow.
-tpNewItemWizard = Easily add a new item. After following the steps of this wizard you will have created a new item. Note that this is the most simplistic way of using Data Crow. More advanced tools like to online search and the file import can create multiple items at once.
-tpMassUpdate = Update multiple items using your preferred online service.
-tpTemplates = Here you can create, delete and edit templates. Templates can be used to fill default values for new items. 
-tpLoan = Lend or return an item. Items can be lend by contact persons.
-tpLoanInformation = Overview of your lend items. Which item was lend by whom and for how long?
-tpItemImportWizard = A tool which can import items from text files and XML files. 
-tpItemExportWizard = Allows you to export your items to a XML or text file. These exports can be used to import items into others systems or other installations of Data Crow. They can also be used to create reports (by using XSLT for example).
-tpFileRenamer = Rename and/or move the files on your system by using the item information. A preview with the pending changed is shown before actually renaming your files.
-tpStartProgram = Tries to open the file linked to the selected item. Note that you can configure file types to be opened with your favorite program from within the settings menu.
-tpFileImport = Can be used to create items based on files located on your file system. The file importer will extract information from each file and add this information to the new item. Imported items are added to the new item tab from where they can be saved. 
-tpExpertUser = The expert user tools allows you to set low-level database options. It also allows you to execute SQL statements on the database.
+tpCreateMultiple = Maak meerdere items in een keer aan.
+tpQuit = Verlaat Data Crow.
+tpShowLog = Toon de gebeurtenissen log.
+tpSaveAll = Bewaar alle items.
+tpUndoSearch = Maakt de huidige filter ongedaan.
+tpWebFieldSettings = Pas de grafische web interface aan. 
+tpWebServer = Het web server controle paneel. Start of stop de web server.
+tpViewSettings = Pas de huidige view aan (CTRL-Y)
+tpUpdateAll = Werkt meerdere items bij met de geselecteerde waarden. 
+tpToolSelectWizard = Hulp bij selecteren van het juiste hulpmiddel voor de taak die u wilt uitvoeren. 
+tpTitleRewriter = Titels kunnen worden herschreven. Hier kunt u de regels voor het herschrijven van nieuwe titels opgegeven en ook de bestaande titels herschrijven.
+tpSort = Sorteer de items. Items kunnen worden gesorteerd op meerdere velden.
+tpSettings = Opent het instellingen formulier.
+tpSaveSelected = Slaat de geselecteerde items op.
+tpChangePassword = Pas het wachtwoord aan voor de geselecteerde gebruiker.
+tpCreateReport = Maak een PDF of HTML rapport.
+tpRetrieveAudioCDInfo = Haal informatie op (online) over de audio CD die in uw DVD of CD rom schijf zit. 
+tpResourceEditor = Pas de labels en berichten aan. Dit hulpmiddel kan ook worden gebruikt om een nieuwe vertaling aan Data Crow toe te voegen. 
+tpManageItemX = Maak nieuwe %1 aan, verwijder ze of pas ze aan.
+tpQuickViewSettings = Hier kunt de quick view aanpassen. Velden kunnen worden toegevoevd, verwijderd en de volgorde kan worden aangepast.   
+tpOpenItem = Open het item in het item formulier. Hier kunt u de informatie van uw item bekijken en aanpassen. 
+tpOnlineSearch = Gebruik een van de online services om informatie over uw items te vinden en toe te voegen aan Data Crow. 
+tpNewItemWizard = Voeg een nieuw item toe met behulp van deze wizard. Dit is niet de meest geavanceerde manier om items toe te voegen. Hulpmiddelen zoals de importer en het online zoeken kunnen meerdere items in een keer aanmaken.   
+tpMassUpdate = Werk meerdere items bij met de geselecteerd online service.
+tpTemplates = Bewerk of verwijder templates of maak een nieuwe aan. Met templates kunnen standaard waarden voor nieuwe items worden gezet. 
+tpLoan = Leen een item uit of registreer dat deze is terug gebracht.
+tpLoanInformation = Overzicht van de uitgeleende items. Aan wie zijn uw items uitgeleend en voor hoe lang? 
+tpItemImportWizard = Importeert items vanuit een XML of een tekst bestand.
+tpItemExportWizard = Hiermee kunnen items worden weggeschreven naar een XML of tekst bestand. Dit bestand kan vervolgens worden gebruikt om de items in een andere systeem of een andere Data Crow installatie te importeren. 
+tpFileRenamer = Hernoem of verplaats de bestanden door gebruik te maken van de informatie van uw items. De voorgestelde wijzigingen worden eerst aan u getoond voordat deze worden uitgevoerd. 
+Rename and/or move the files on your system by using the item information. A preview with the pending changed is shown before actually renaming your files.
+tpStartProgram = Opent het onderliggende bestande. U kunt overigens aangeveven met welk programma een bestandstype moet worden geopend. Dit kunt u doen vanuit het instelling scherm (CTRL-M).  
+tpFileImport = Importeer items aan de hand van de bestanden op je systeem. Ieder bevat wordt beschouwd als een enkel item. Het importeer proces lees informatie uit het bestand en voegt deze toe aan het item. 
+tpExpertUser = Met de expert tool kunt u de database instellingen wijzigen en SQL statements direct uitvoeren op de database.  
 tpFieldSettings = Verberg en hernoem velden of pas hun eigenschappen aan. 
 tpDonate = Doneer $ aan het team van Data Crow.
 tpDriveManager = De Drive Manager is een krachtige hulpmiddel die de bestandsinformatie van je items bijwerkt. Handig wanneer je je bestanden hebt verplaatst naar een andere locatie.
