*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -999,7 +999,7 @@ lblRemove=Verwijder
 msgErrorWhileSettingValue=Kon waarde %1 niet invullen voor veld %2
 msgModuleIsNewCreatingItems=Module is nieuw. De items zullen worden geladen tijdens een herstart
 sysSoftwarepublisherFieldName=Naam
-tpDelete=Verwijderd de geselecteerde items
+tpDelete=Verwijder de geselecteerde items
 sysTemplate=Template
 sysColorItemPlural=Kleuren
 0x0001=Microsoft PCM Format
