*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -865,6 +865,7 @@ sysContainer=Container
 tpRequiredFields=data Crow controleert of alle velden gemarkeerd als verplicht ook daadwerkelijk zijn gevuld
 sysMusicartistFieldexternalreferences=Externe Referenties
 msgFileOrExtensionNotFilled=Voer zowel het bestandstype als het programma in
+tpItemFormSettings = Pas de layout van het item formulier aan. Voeg velden toe of verwijder ze en design de tabs.
 sysBook_storagemediumItemPlural=Opslagmedia
 lblExporter=Exporter
 msgNotSameState=De geselecteerde items hebben verschillende uitleen statussen en kunnen niet allemaal tegelijk worden geadministreerd
