--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -1,15 +1,17 @@
+tpCreateMultiple = Create multiple items at once.
 tpQuit = Exit Data Crow. Closes the application.
 tpShowLog = Opens the event log window.
 tpSaveAll = Save all items.
 tpUndoSearch = Removes the filter from the view
 tpWebFieldSettings = Customize the Web GUI
 tpWebServer = Web server control panel. Stop or start the web server.
-tpViewSettings = Customize the current view
+tpViewSettings = Customize the current view (CTRL-Y)
 tpUpdateAll = Updates multiple items with the selected value(s).
 tpToolSelectWizard = Helps you to select the right tool for the job
 tpTitleRewriter = Set rewriting (also known as formatting) rules for the titles of new items. Additionally you can rewrite all the existing titles.
 tpSort = Sort the items. Items can be sorted on multiple fields.
 tpSettings = Opens the settings window.
+tpItemFormSettings = Make changes to the layout of the item form. You can add and remove field and design the tabs.
 tpSaveSelected = Saves the selected item(s)
 tpChangePassword = Change the password for the selected user
 tpCreateReport = Create a PDF or HTML report.
