*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,4 +1,5 @@
 tpCreateMultiple = Maak meerdere items in een keer aan.
+tpAddDrive = Voeg een directory toe. Deze directory kan vervolgens als schijfstation worden gebruikt.
 tpQuit = Verlaat Data Crow.
 tpShowLog = Toon de gebeurtenissen log.
 tpSaveAll = Bewaar alle items.
