--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -51,7 +51,7 @@ tpBeginnerMode = Sets Data Crow into beginner mode, hiding the more advanced fea
 tpAddChild = Adds a new child item to the selected item.
 tpAbout = The about dialog tells you more about the Data Crow product.
 tpHelp = Opens the help. The help can also be consulted by using the F1 key. 
-tpAddDrive = Add a new drive by creating a mapping to an existing location.
+tpAddDrive = Add a directory to the drives list.
 tpCopyModuleWizard = With this wizard you can create a new module based on an existing one.
 tpExportModuleWizard = This wizard can be used to export a custom module and all its related information. This give you the change to share your custom modules with other users of Data Crow.
 tpImportModuleWizard = This wizard can be used to import a module zip file.
