*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,5 @@
+msgSelectTheToolOfYourChoice = Select the tool of your choice. You can select a tool by ticking the check box.
+msgSelectToolFirst = Please select a tool by ticking one of the check boxes.
 msgToolSelectModuleSelect = Select the module for which you would like to create or update items. 
 msgUnexpectedErrorOccurred = An unexpected error has occurred.
 msgMatchFound = A match was found for '%1'. Item '%2' has been updated.
