--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,5 @@
+msgSelectTheToolOfYourChoice = Selecteer het hulpmiddel. U kunt deze selecteren door de checkbox aan te vinken.
+msgSelectToolFirst = Selecteer eerst een hulpmiddel door deze aan te vinken
 tpCreateMultiple = Maak meerdere items in een keer aan.
 tpAddDrive = Voeg een directory toe. Deze directory kan vervolgens als schijfstation worden gebruikt.
 tpQuit = Verlaat Data Crow.
