*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,4 +1,4 @@
-msgSelectTheToolOfYourChoice = Selecteer het hulpmiddel. U kunt deze selecteren door de checkbox aan te vinken.
+msgSelectTheToolOfYourChoice = Selecteer het hulpmiddel. U kunt deze selecteren door op het icoontje te klikken.
 msgSelectToolFirst = Selecteer eerst een hulpmiddel door deze aan te vinken
 tpCreateMultiple = Maak meerdere items in een keer aan.
 tpAddDrive = Voeg een directory toe. Deze directory kan vervolgens als schijfstation worden gebruikt.
