--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+msgToolSelectModuleSelect = Selecteer de module waarvoor u items wilt gaan aanmaken of bijwerken.
 msgSelectTheToolOfYourChoice = Selecteer het hulpmiddel. U kunt deze selecteren door op het icoontje te klikken.
 msgSelectToolFirst = Selecteer eerst een hulpmiddel door deze aan te vinken
 tpCreateMultiple = Maak meerdere items in een keer aan.
