*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,6 +1,6 @@
 msgSelectTheToolOfYourChoice = Select the tool of your choice. You can select a tool by pressing its icon.
 msgSelectToolFirst = Please select a tool by ticking one of the check boxes.
-msgToolSelectModuleSelect = Select the module for which you would like to create or update items. 
+msgToolSelectModuleSelect = Select the module for which you would like to create or update items. This wizard can be started from the help menu. 
 msgUnexpectedErrorOccurred = An unexpected error has occurred.
 msgMatchFound = A match was found for '%1'. Item '%2' has been updated.
 msgAddDrive = Add a new drive
