--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,4 +1,4 @@
-msgToolSelectModuleSelect = Selecteer de module waarvoor u items wilt gaan aanmaken of bijwerken.
+msgToolSelectModuleSelect = Selecteer de module waarvoor u items wilt gaan aanmaken of bijwerken. Deze wizard kan gestart worden vanuit het help menu.
 msgSelectTheToolOfYourChoice = Selecteer het hulpmiddel. U kunt deze selecteren door op het icoontje te klikken.
 msgSelectToolFirst = Selecteer eerst een hulpmiddel door deze aan te vinken
 tpCreateMultiple = Maak meerdere items in een keer aan.
