*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcTooltips.properties
+++ b/_source/net/datacrow/core/resources/DcTooltips.properties
@@ -21,8 +21,8 @@ tpManageItemX = Create, delete or edit %1.
 tpQuickViewSettings = Modify the quick view (the panel shown on the right-hand side of the view). You can add, remove and order the fields. 
 tpOpenItem = Opens the selected item in the item form. From within the item form the information can be viewed and altered.
 tpOnlineSearch = Use an online service to find your items and add them to Data Crow.
-tpNewItemWizard = Easily add a new item. After following the steps of this wizard you will have created a new item. Note that this is the most simplistic way of using Data Crow. More advanced tools like to online search and the file import can create multiple items at once.
-tpMassUpdate = Update multiple items using your preferred online service.
+tpNewItemWizard = Easily add a new item. After following the steps of this wizard you will have created a new item. This is this easiest way of adding a single item to Data Crow.
+tpMassUpdate = Update multiple existing items using your preferred online service. This only works for existing items which are currently displayed in the view.
 tpTemplates = Here you can create, delete and edit templates. Templates can be used to fill default values for new items. 
 tpLoan = Lend or return an item. Items can be lend by contact persons.
 tpLoanInformation = Overview of your lend items. Which item was lend by whom and for how long?
@@ -37,7 +37,7 @@ tpDonate = Make a donation to the development team (that would be me) of Data Cr
 tpDriveManager = The Drive Manager is a powerful tool which can keep all of your file-based-items synchronized with your file system.
 tpEditItemAsNew = Use the selected item as a template for a new item.
 tpExpertMode = Sets Data Crow into experienced user mode enabling all options and tools.
-tpNewItem = Create a new item using the item form.
+tpNewItem = Create a new item using the item form. Using the item form you can manually enter all values. If online services are available you can also use the update button to perform an online search for information on your item. 
 tpCardView = A stylish view which represents each item as a card. You can configure this view using the view settings from the settings menu (or CTRL-Y).
 tpTableView = A high performance view. The table view allows you to directly modify the informations of your items. You can configure this view using the view settings from the settings menu (or CTRL-Y). 
 tpChangePassword = Change your password. Make sure to remember your newly entered password! After setting a password you will always have to log in. Note that the default login name is 'sa'.
