--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -24,8 +24,8 @@ tpManageItemX = Maak nieuwe %1 aan, verwijder ze of pas ze aan.
 tpQuickViewSettings = Hier kunt de quick view aanpassen. Velden kunnen worden toegevoevd, verwijderd en de volgorde kan worden aangepast.   
 tpOpenItem = Open het item in het item formulier. Hier kunt u de informatie van uw item bekijken en aanpassen. 
 tpOnlineSearch = Gebruik een van de online services om informatie over uw items te vinden en toe te voegen aan Data Crow. 
-tpNewItemWizard = Voeg een nieuw item toe met behulp van deze wizard. Dit is niet de meest geavanceerde manier om items toe te voegen. Hulpmiddelen zoals de importer en het online zoeken kunnen meerdere items in een keer aanmaken.   
-tpMassUpdate = Werk meerdere items bij met de geselecteerd online service.
+tpNewItemWizard = Voeg een nieuw item toe met behulp van deze wizard. Dit is verreweg de makkelijkste manier om een enkel item aan Data Crow toe te voegen.   
+tpMassUpdate = Werk meerdere, reeds bestaande, items bij met de geselecteerde online service. Dit geldt alleen voor reeds bestaande items. De items moeten zichtbaar zijn in het overzicht.
 tpTemplates = Bewerk of verwijder templates of maak een nieuwe aan. Met templates kunnen standaard waarden voor nieuwe items worden gezet. 
 tpLoan = Leen een item uit of registreer dat deze is terug gebracht.
 tpLoanInformation = Overzicht van de uitgeleende items. Aan wie zijn uw items uitgeleend en voor hoe lang? 
@@ -40,7 +40,7 @@ tpDonate = Doneer $ aan het team van Data Crow.
 tpDriveManager = De Drive Manager is een krachtige hulpmiddel die de bestandsinformatie van je items bijwerkt. Handig wanneer je je bestanden hebt verplaatst naar een andere locatie.
 tpEditItemAsNew = Gebruik het bestaande item als template voor het nieuwe item.
 tpExpertMode = De expert modus stelt alle hulpmiddelen ter beschikking.
-tpNewItem = Maak een nieuw item aan.
+tpNewItem = Maak een nieuw item aan met behulp van het item formulier. Met dit formulier kunnen alle velden handmatig worden ingevuld. Als er online services beschikbaar zijn kunt u de informatie online zoeken door te klikken op de bijwerken knop. 
 tpCardView = Een stijlvol overzicht waarbij ieder item wordt weergegeven als een kaartje. Je kunt dit overzicht configureren door middel van de overzichtsinstellingen (CTRL-Y) welke is te vinden in het instellingen menu.
 tpTableView = Met dit overzicht kunnen items direct, vanuit het overzicht, worden bewerkt. Je kunt dit overzicht configureren door middel van de overzichtsinstellingen (CTRL-Y) welke is te vinden in het instellingen menu. 
 tpChangePassword = Verander je wachtwoord. Vergeet dit wachtwoord niet! De naam inlog naam van de standaard gebruiker is 'sa'.
