*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,5 @@
+msgFreeDBServerReturnedError = De FreeDB server retourneerde de volgende foutmelding: %1
+msgFreeDBServerUnreachable = De FreeDB server kan niet worden bereikt.
 msgToolSelectModuleSelect = Selecteer de module waarvoor u items wilt gaan aanmaken of bijwerken. Deze wizard kan gestart worden vanuit het help menu.
 msgSelectTheToolOfYourChoice = Selecteer het hulpmiddel. U kunt deze selecteren door op het icoontje te klikken.
 msgSelectToolFirst = Selecteer eerst een hulpmiddel door deze aan te vinken
