--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,5 @@
+msgFreeDBServerReturnedError = The FreeDB server returned the following error: %1 
+msgFreeDBServerUnreachable = The FreeDB server is unreachable.
 msgSelectTheToolOfYourChoice = Select the tool of your choice. You can select a tool by pressing its icon.
 msgSelectToolFirst = Please select a tool by ticking one of the check boxes.
 msgToolSelectModuleSelect = Select the module for which you would like to create or update items. This wizard can be started from the help menu. 
