*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -168,7 +168,8 @@ msgDataLoadingError = An error occurred while loading items. The system will exi
 msgOutOfMemory = There seems to be too less memory left to load all the items. Please free up memory before starting again. 
 msgSavingXItems = Saving %1 items
 msgDeletingXItems = Deleting %1 items
-msgTransformingOutput = Transforming output to %1
+msgCreateReportFailedUnexpect = The report creation process failed unexpectedly: %1 
+msgTransformingOutput = Transforming output to %1. Please wait.
 msgTransformationSuccessful = Transformation was a success (%1)
 msgMassUpdateMethodHasNotBeenDefined = Please select either to use Online Service or File Parsing (or both)
 msgSearchingOnlineFor = Searching online for %1
