--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1412,7 +1412,8 @@ lblFileHashMaxFileSize=Maak hashes voor bestanden kleiner dan
 sysMusicartist_externalreferenceFieldID=ID
 sysMovieFieldEpisodeName=Naam Aflevering
 tpClear=Verwijdert alle informatie
-msgTransformingOutput=Bezig met het transformeren van het XML bestan naar %1
+msgTransformingOutput=Bezig met het transformeren van het XML bestan naar %1. Even geduld aub.
+msgCreateReportFailedUnexpect = Het aanmaken van het rapport is mislukt: %1
 sysMovie_externalreferenceFieldLabel=Label
 sysSuperFieldModified=Aangepast op
 sysTabFieldModified=Aangepast op
